# Project-Tick-New

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  COPYING.md  GNUmakefile  LICENSE  README.md  REUSE.toml  SECURITY.md  args.c  arith_yacc.c  arith_yacc.h  bootstrap.cmd  bootstrap.sh  cd.h  cdefs.h  chmod.1  compat.c  compat.h  conv.c  conv_tab.c  cpuset.1  cpuset.c  date.c  dd.1  dd.c  dd.h  df.1  domainname.1  domainname.c  echo.1  echo.c  ed.h  (+37 more)
libnbtplusplus/: CMakeLists.txt
libnbtplusplus/include/: tag_compound.h  tag_list.h  tag_primitive.h  tag_string.h  value.h
libnbtplusplus/include/io/: izlibstream.h  ozlibstream.h  stream_reader.h  zlib_streambuf.h
libnbtplusplus/nix/: default.nix
libnbtplusplus/src/: tag_compound.cpp  tag_list.cpp  tag_string.cpp  value.cpp
libnbtplusplus/src/io/: izlibstream.cpp  ozlibstream.cpp
libnbtplusplus/test/: test_value.h
meshmc/: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING.md  README.md  REUSE.toml  bootstrap.cmd  changelog.md  flake.nix  vcpkg-configuration.json
meshmc/.github/: dco.yml  pull_request_template.md
meshmc/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rfc.yml  suggestion.yml
meshmc/.github/workflows/: backport.yml  build.yml  codeql.yml  container.yml  nix.yml  publish.yml  release.yml  update-flake.yml
meshmc/branding/: LICENSE  MeshMC.manifest.in  genicons.sh  meshmc.6.scd.in  meshmc.qrc.in  meshmc.rc.in  org.projecttick.MeshMC.desktop.in  org.projecttick.MeshMC.icns  org.projecttick.MeshMC.metainfo.xml.in  portable.txt  win_install.nsi.in
meshmc/branding/MeshMC.icon/: icon.json
meshmc/buildconfig/: BuildConfig.cpp.in  BuildConfig.h
meshmc/cmake/: MacOSXBundleInfo.plist.in  QMakeQuery.cmake  UnitTest.cmake
meshmc/cmake/UnitTest/: TestUtil.h  test.manifest  test.rc
meshmc/crashreporter/: CMakeLists.txt  CrashReportDialog.cpp  CrashReportDialog.h  main.cpp
meshmc/doc/: meshmc.1.txt  meshmc.6.txt
meshmc/launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  ApplicationMessage.h  BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  Commandline.cpp  Commandline.h  DefaultVariable.h  DesktopServices.cpp  DesktopServices.h  Exception.h  ExponentialSeries.h  FileSystem.cpp  FileSystem.h  FileSystem_test.cpp  Filter.cpp  Filter.h  GZip.cpp  GZip.h  GZip_test.cpp  HoeDown.h  InstanceCopyTask.cpp  InstanceCopyTask.h  InstanceCreationTask.cpp  InstanceCreationTask.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  InstancePageProvider.h  InstanceTask.cpp  InstanceTask.h  JavaCommon.cpp  (+39 more)
meshmc/launcher/icons/: IconList.cpp  IconList.h  IconUtils.cpp  IconUtils.h  MMCIcon.cpp  MMCIcon.h
meshmc/launcher/java/: JavaChecker.cpp  JavaChecker.h  JavaCheckerJob.cpp  JavaCheckerJob.h  JavaInstall.cpp  JavaInstall.h  JavaInstallList.cpp  JavaInstallList.h  JavaUtils.cpp  JavaUtils.h  JavaVersion.cpp  JavaVersion.h  JavaVersion_test.cpp
meshmc/launcher/launch/: LaunchStep.cpp  LaunchStep.h  LaunchTask.cpp  LaunchTask.h  LogModel.cpp  LogModel.h
meshmc/launcher/meta/: BaseEntity.cpp  BaseEntity.h  Index.cpp  Index.h  Index_test.cpp  JsonFormat.cpp  JsonFormat.h  Version.cpp  Version.h  VersionList.cpp  VersionList.h
meshmc/launcher/minecraft/: AssetsUtils.cpp  AssetsUtils.h  Component.cpp  Component.h  ComponentUpdateTask.cpp  ComponentUpdateTask.h  ComponentUpdateTask_p.h  GradleSpecifier.h  GradleSpecifier_test.cpp  LaunchProfile.cpp  LaunchProfile.h  Library.cpp  Library.h  Library_test.cpp  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLoadAndCheck.cpp  MinecraftLoadAndCheck.h  MinecraftUpdate.cpp  MinecraftUpdate.h  MojangDownloadInfo.h  MojangVersionFormat.cpp  MojangVersionFormat.h  MojangVersionFormat_test.cpp  OneSixVersionFormat.cpp  OneSixVersionFormat.h  OpSys.cpp  OpSys.h  PackProfile.cpp  PackProfile.h  PackProfile_p.h  ParseUtils.cpp  ParseUtils.h  ParseUtils_test.cpp  ProfileUtils.cpp  ProfileUtils.h  Rule.cpp  Rule.h  VersionFile.cpp  VersionFile.h  (+6 more)
meshmc/launcher/modplatform/: ContentDownloadTask.cpp  ContentDownloadTask.h  ContentType.h  DependencyResolver.cpp  DependencyResolver.h  ModDownloadTypes.h
meshmc/launcher/mojang/: PackageManifest.cpp  PackageManifest.h  PackageManifest_test.cpp
meshmc/launcher/net/: ByteArraySink.h  ChecksumValidator.h  Download.cpp  Download.h  FileSink.cpp  FileSink.h  HttpMetaCache.cpp  HttpMetaCache.h  MetaCacheSink.cpp  MetaCacheSink.h  Mode.h  NetAction.h  NetJob.cpp  NetJob.h  PasteUpload.cpp  PasteUpload.h  Sink.h  Validator.h
meshmc/launcher/news/: NewsChecker.cpp  NewsChecker.h  NewsEntry.cpp  NewsEntry.h
meshmc/launcher/notifications/: NotificationChecker.cpp  NotificationChecker.h
meshmc/launcher/pathmatcher/: FSTreeMatcher.h  IPathMatcher.h  MultiMatcher.h  RegexpMatcher.h
meshmc/launcher/plugin/: MMCOFormat.h  PluginAPI.h  PluginHooks.h  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h  PluginMetadata.h
meshmc/launcher/screenshots/: ImgurAlbumCreation.cpp  ImgurAlbumCreation.h  ImgurUpload.cpp  ImgurUpload.h  Screenshot.h
meshmc/launcher/settings/: INIFile.cpp  INIFile.h  INIFile_test.cpp  INISettingsObject.cpp  INISettingsObject.h  OverrideSetting.cpp  OverrideSetting.h  PassthroughSetting.cpp  PassthroughSetting.h  Setting.cpp  Setting.h  SettingsObject.cpp  SettingsObject.h
meshmc/launcher/tasks/: SequentialTask.cpp  SequentialTask.h  Task.cpp  Task.h
meshmc/launcher/tools/: JProfiler.h  (+9 more)
meshmc/libraries/: README  README.md
meshmc/nix/: README.md  unwrapped.nix  wrapper.nix
meshmc/plugins/: CMakeLists.txt
meshmc/scripts/: check-clang-format.sh  checkpatch.pl
meshmc/updater/: CMakeLists.txt  Installer.cpp  Installer.h  main.cpp
meta/: .gitignore  README.md  components-schema.json  flake.nix  init.sh  pyproject.toml  requirements.txt  update.sh
ofborg/ofborg/: Cargo.toml
(+5758 files in other folders)
