[tool.poetry]
name = "meta"
version = "10.0.3"
description = "MeshMC meta generator"
authors = ["Mehmet Samet Duman <yongdohyun@projecttick.org>"]
license = "MS-PL"
readme = "README"
repository = "https://github.com/Project-Tick/Project-Tick"
documentation = "https://github.com/Project-Tick/Project-Tick"
keywords = ["metadata", "meshmc", "instance"]

[tool.poetry.scripts]
generateFabric = "meta.run.generate_fabric:main"
generateForge = "meta.run.generate_forge:main"
generateLiteloader = "meta.run.generate_liteloader:main"
generateMojang = "meta.run.generate_mojang:main"
generateNeoForge = "meta.run.generate_neoforge:main"
generateQuilt = "meta.run.generate_quilt:main"
generateJava = "meta.run.generate_java:main"
updateFabric = "meta.run.update_fabric:main"
updateForge = "meta.run.update_forge:main"
updateLiteloader = "meta.run.update_liteloader:main"
updateMojang = "meta.run.update_mojang:main"
updateNeoForge = "meta.run.update_neoforge:main"
updateQuilt = "meta.run.update_quilt:main"
updateJava = "meta.run.update_java:main"
index = "meta.run.index:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cachecontrol = "^0.14.0"
requests = "^2.33.1"
filelock = "^3.20.3"
packaging = "^25.0"
pydantic = "^1.10.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
